# bootstrap-gallery-generator

./: .pre-commit-config.yaml  setup.cfg
.reuse/: dep5
src/bootstrap_gallery_generator/: gallery_generator.py  grouped_iterator.py
src/bootstrap_gallery_generator/templates/: gallery.jinja2.html
