[metadata]
name = bootstrap_gallery_generator
version = 1.0.0
author = Marcus Müller
author_email = marcus_gallery@hostalia.de
description = Generate a HTML gallery using Bootstrap layout from a list of image file names
# long_description = file: README.md
# long_description_content_type = text/markdown
url = https://github.com/marcusmueller/bootstrap-gallery-generator
project_urls =
    Bug Tracker = https://github.com/marcusmueller/bootstrap-gallery-generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Operating System :: OS Independent

[options]
package_dir =
  = src/
packages = bootstrap_gallery_generator
python_requires = >=3.6
include_package_data = True
install_requires =
  ninja2
[options.package_data]
bootstrap_gallery_generator =
   *.jinja2.html
[options.packages.find]
where = src
[options.entry_points]
console_scripts =
  bootstrap_gallery = bootstrap_gallery_generator.gallery_generator:main
